Added two more aggregation functions

--- a/src/design-blocks/index.html
+++ b/src/design-blocks/index.html
@@ -265,7 +265,9 @@
                         [ "Median", "MEDIAN" ],
                         [ "Mode", "MODE" ],
                         [ "Range", "RANGE" ],
-                        [ "Sum", "SUM" ]
+                        [ "Sum", "SUM" ],
+                        [ "Min", "MIN" ],
+                        [ "Max", "MAX" ],
                     ]
                 },
                 {
